<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedIds">

    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_post"
            android:checkable="true"
            android:icon="@drawable/ic_post"
            android:title="@string/nav_post" />


        <item
            android:id="@+id/nav_topic"
            android:checkable="true"
            android:icon="@drawable/ic_topic"
            android:title="@string/nav_topic" />

    </group>

    <group
        android:id="@+id/group_personal"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:checkable="true"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notification" />

        <item
            android:id="@+id/nav_subscription"
            android:checkable="true"
            android:icon="@drawable/ic_subscription"
            android:title="@string/nav_subscription" />

        <item
            android:id="@+id/nav_profile"
            android:checkable="true"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_profile" />
    </group>

    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:checkable="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:checkable="false"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_logout" />
    </group>

</menu>