<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.signup.SignupActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/signin_guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="5dp"
                    android:text="@string/x"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:paddingBottom="10dp"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_app_logo" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_layout_margin_side"
                    android:layout_marginTop="@dimen/input_layout_margin"
                    android:layout_marginEnd="@dimen/input_layout_margin_side"
                    android:padding="@dimen/input_layout_padding"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/full_name"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edit_text_margin"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:hint="Full name"
                        android:inputType="textVisiblePassword|textNoSuggestions"
                        android:maxLength="50"
                        android:padding="@dimen/edit_text_padding"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_layout_margin_side"
                    android:layout_marginTop="@dimen/input_layout_margin"
                    android:layout_marginEnd="@dimen/input_layout_margin_side"
                    android:padding="@dimen/input_layout_padding"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edit_text_margin"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:hint="Username *"
                        android:inputType="textVisiblePassword|textNoSuggestions"
                        android:maxLength="50"
                        android:padding="@dimen/edit_text_padding"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_layout_margin_side"
                    android:layout_marginTop="@dimen/input_layout_margin"
                    android:layout_marginEnd="@dimen/input_layout_margin_side"
                    android:padding="@dimen/input_layout_padding"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_username"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edit_text_margin"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:hint="Email *"
                        android:inputType="textVisiblePassword|textNoSuggestions"
                        android:maxLength="50"
                        android:padding="@dimen/edit_text_padding"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/input_layout_margin_side"
                    android:layout_marginTop="@dimen/input_layout_margin"
                    android:layout_marginEnd="@dimen/input_layout_margin_side"
                    android:padding="@dimen/input_layout_padding"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edit_text_margin"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:hint="Password *"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:padding="@dimen/edit_text_padding"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/input_layout_margin"
                    android:padding="@dimen/edit_text_padding"
                    android:text="@string/get_an_account_login" />


                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_marginBottom="30dp"-->

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar_cyclic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:visibility="gone" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
